# lore

./: .gitignore  Cargo.toml  project_symbols_design.txt
genesis/: Cargo.toml
genesis/src/: lib.rs  noise.rs
goblin/shaders/: default_shader.vert
goblin/src/: lib.rs
goblin/src/rendering/: data_updates.rs
lore/: Cargo.toml
lore/src/: input.rs  lib.rs
lore_mesh/: Cargo.toml
lore_mesh/src/: lib.rs  mesh.rs  mesh_loading.rs
lore_render/: Cargo.toml  LICENSE
lore_render/shaders/: default_shader.wgsl  gui_shader.wgsl
lore_render/src/: api.rs  image_loading.rs  lib.rs  mesh.rs  rendering.rs
lore_render/src/asset_loading/: images.rs  meshes.rs  mod.rs
lore_render/src/rendering/: camera.rs  engine.rs  mod.rs  rendering.rs
second_day/: Cargo.toml
second_day/src/: lib.rs  mesh_gen.rs  noise.rs
stillwind/: Cargo.toml
stillwind/examples/: example.sw
stillwind/src/: grammar.pest  lib.rs  vm.rs
tester/: Cargo.toml  test.sw
tester/assets/: eg.glb
tester/notes/scripts/: CanEat.sc  CanVomit.sc  CannotEatStrawberries.sc  IsFood.sc  IsItem.sc
tester/src/: main.rs  stillwind.rs
