[package]
name = "second_day"
version = "0.1.0"
authors = ["soerxpso <soerxpso@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lore_mesh = { path = "../lore_mesh"}
rand = "0.7.2"
image = "0.22.0"
cgmath = "0.17.0"
